[project]
name = "ooijh"
version = "0.0.1"
authors = [
  { name="Ian Black", email="blackia@oregonstate.edu" },
]
description = "A package for navigating the OOI JupyterHub."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IanTBlack/ooijh"
"Bug Tracker" = "https://github.com/IanTBlack/ooijh/issues"